yaml/content-web-deploy-solution.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: content-web
  labels:
    app: content-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: content-web
  template:
    metadata:
      labels:
        app: content-web
    spec:
      containers:
      - name: content-web
        image: whatthehackmsft/content-web
        resources:
          requests:
            cpu: 500m
            memory: 128Mi
        ports:
        - containerPort: 3000
