yaml/trips-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips
  labels:
    app: trips
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trips
  template:
    metadata:
      labels:
        app: trips
    spec:
      containers:
      - name: trips
        image: registryyel3358.azurecr.io/tripinsights/trips:1.0
        resources:
          requests:
            cpu: 500m
            memory: 128Mi
        ports:
        - containerPort: 80
