yaml/user-java-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: user-java
  name: user-java
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-java
  template:
    metadata:
      labels:
        app: user-java
    spec:
      containers:
      - image: registryyel3358.azurecr.io/tripinsights/user-java:1.0
        name: user-java
