yaml/content-web-service-solution.yml
apiVersion: v1
kind: Service
metadata:
  name: content-web
  labels:
    app: content-web
spec:
  type: LoadBalancer
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
  selector:
    app: content-web
