yaml/trip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: trips
  labels:
    app: trips
  namespace: api
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 80
    protocol: TCP
  selector:
    app: trips
