yaml/tripviewer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tripviewer
  name: tripviewer
  namespace: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tripviewer
  template:
    metadata:
      labels:
        app: tripviewer
    spec:
      containers:
      - image: registryyel3358.azurecr.io/tripinsights/tripviewer:1.0
        name: tripviewer
        resources: 
          requests:
            cpu: 500m
            memory: 128Mi
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: tripviewer
  labels:
    app: tripviewer
  namespace: web
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 80
    protocol: TCP
  selector:
    app: tripviewer
