yaml/user-java-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: user-java
  name: user-java
  namespace: api
spec:
  ports:
  - name: 8080-80
    port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: user-java
  type: ClusterIP
