yaml/userprofile-service.yml
apiVersion: v1
kind: Service
metadata:
  name: userprofile
  labels:
    app: userprofile
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 80
    protocol: TCP
  selector:
    app: userprofile
