yaml/wcf-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wcf
  name: wcf
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wcf
  template:
    metadata:
      labels:
        app: wcf
    spec:
      containers:
      - image: registryyel3358.azurecr.io/wcfservice:1.0
        name: wcf
        resources: 
          requests:
            cpu: 500m
            memory: 128Mi
        ports:
        - containerPort: 80
      tolerations:
      - key: "os"
        operator: "Equal"
        value: "windows"
        effect: "NoSchedule"
---
apiVersion: v1
kind: Service
metadata:
  name: wcf
  labels:
    app: wcf
  namespace: api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: wcf
